# Cuda-course-tasks

./: .gitignore  ArrayAllocation.cu  CMakeLists.txt  Cuda-course-tasks.sln  README.md  build.sh  kernel.cu
src/: kernel.cu
src/1 task/: ArrayAllocation.cu  ArrayAllocation.cuh
src/task1/: ArrayAllocation.cu  ArrayAllocation.cuh  CMakeLists.txt
src/task2/: CMakeLists.txt  ImageProcessing.cu  ImageProcessing.cuh
src/task3/: main.cu  makefile  smain.sbatch
src/task4/: CMakeLists.txt  FindCircle.cu  FindCircle.cuh  FindCircleCPU.cu  FindCircleGPU.cu
